  environment.  Likewise, printenv A=B silently ignores the invalid
  name.  [the bugs date back to the initial implementation]

  md5sum now prints checksums atomically so that concurrent
  processes will not intersperse their output.
  This also affected sum, sha1sum, sha224sum, sha384sum and sha512sum.
  [the bug dates back to the initial implementation]

  nice -n -1 PROGRAM now runs PROGRAM even when its internal setpriority
  call fails with errno == EACCES.
  [the bug dates back to the initial implementation]

  nice, nohup, and su now refuse to execute the subsidiary program if
  they detect write failure in printing an otherwise non-fatal warning
  message to stderr.

  stat -f recognizes more file system types: afs, cifs, anon-inode FS,
  btrfs, cgroupfs, cramfs-wend, debugfs, futexfs, hfs, inotifyfs, minux3,
  nilfs, securityfs, selinux, xenfs

  tail -f (inotify-enabled) now avoids a race condition.
  Before, any data appended in the tiny interval between the initial
  read-to-EOF and the inotify watch initialization would be ignored
  initially (until more data was appended), or forever, if the file
  were first renamed or unlinked or never modified.
  [The race was introduced in coreutils-7.5]

  timeout now doesn't exit unless the command it is monitoring does,
  for any specified signal. [bug introduced in coreutils-7.0].

** Changes in behavior

  chroot, env, nice, and su fail with status 125, rather than 1, on
  internal error such as failure to parse command line arguments; this
  is for consistency with stdbuf and timeout, and avoids ambiguity
  with the invoked command failing with status 1.  Likewise, nohup
  fails with status 125 instead of 127.

  echo and printf now interpret \e as the Escape character (0x1B).

  rm -f /read-only-fs/nonexistent now succeeds and prints no diagnostic
  on systems with an unlinkat syscall that sets errno to EROFS in that case.
  Before, it would fail with a "Read-only file system" diagnostic.